--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <nav class="navbar navbar-light bg-light static-top">
          <div class="container">
             <a class="navbar-brand" href="#!">DT Clubs Day 2022</a>
-            <a class="btn btn-primary" href="/2021">2021</a>
+            <a class="btn btn-primary" href="https://2021.dtclubsday.ca">2021</a>
          </div>
       </nav>
       <!-- Masthead-->
