--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
          .type("Clubs Day is no longer virtual.")
          .pause(1000)
          .delete(31)
-         .type("Come by on OCTOBER 7TH at LUNCH in the GYM!")
+         .type("Come by the GYM at LUNCH on OCTOBER 7TH!")
          .go();
       </script>
    </body>
