--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
          .type("Welcome!")
          .pause(1000)
          .delete(8)
-         .type("Clubs Day is no longer virtual.")
+         .type("Clubs Day is IN PERSON.")
          .pause(1000)
          .delete(31)
          .type("Come by the GYM at LUNCH on OCTOBER 7TH!")
