--- a/map.html
+++ b/map.html
@@ -21,4 +21,10 @@ html, body, #wrapper {
       </tr>
    </table>
 </body>
+<script src="https://raw.githubusercontent.com/stowball/jQuery-rwdImageMaps/master/jquery.rwdImageMaps.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+<script>$(document).ready(function(e) {
+   $('img[usemap]').rwdImageMaps();
+});
+</script>
 </html>
