--- a/map.html
+++ b/map.html
@@ -1,19 +1,22 @@
 <html>
 <head>
-<style>
-html, body, #wrapper {
-       height:100%;
-       width: 100%;
-       margin: 0;
-       padding: 0;
-       border: 0;
-    }
-    #wrapper td {
-       vertical-align: middle;
-       text-align: center;
-    }
-</style>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1">
+   <style>
+      html, body, #wrapper {
+             height:100%;
+             width: 100%;
+             margin: 0;
+             padding: 0;
+             border: 0;
+          }
+          #wrapper td {
+             vertical-align: middle;
+             text-align: center;
+          }
+      </style>
 </head>
+
 <body>
    <table id="wrapper">
       <tr>
@@ -21,10 +24,5 @@ html, body, #wrapper {
       </tr>
    </table>
 </body>
-<script src="https://raw.githubusercontent.com/stowball/jQuery-rwdImageMaps/master/jquery.rwdImageMaps.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-<script>$(document).ready(function(e) {
-   $('img[usemap]').rwdImageMaps();
-});
-</script>
+
 </html>
