--- a/map.html
+++ b/map.html
@@ -1,7 +1,7 @@
 <html>
 <head>
    <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1">
+   <meta name="viewport" content="width=device-width, initial-scale=0.50">
    <style>
       html, body, #wrapper {
              height:100%;
