--- a/map.html
+++ b/map.html
@@ -20,7 +20,7 @@
 <body>
    <table id="wrapper">
       <tr>
-         <td><img src="/maps/main-layout.jpg" alt="" /></td>
+         <td><img src="/maps/layout.jpg" alt="" /></td>
       </tr>
    </table>
 </body>
