--- a/index.html
+++ b/index.html
@@ -1,107 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-      <meta name="robots" content="index, follow" />
-      <!-- Primary Meta Tags -->
-      <title>David Thompson Clubs Day 2022</title>
-      <meta name="title" content="David Thompson Clubs Day" />
-      <meta name="description" content="Come to the gym on October 7th during lunch to sign up for your clubs this year!" />
-      <!-- Open Graph / Facebook -->
-      <meta property="og:type" content="website" />
-      <meta property="og:url" content="https://dtclubsday.ca/" />
-      <meta property="og:title" content="David Thompson Clubs Day" />
-      <meta property="og:description" content="Come to the gym on October 7th during lunch to sign up for your clubs this year!" />
-      <meta property="og:image" content="/images/splash.png" />
-      <!-- Twitter -->
-      <meta property="twitter:card" content="summary_large_image" />
-      <meta property="twitter:url" content="https://dtclubsday.ca/" />
-      <meta property="twitter:title" content="David Thompson Clubs Day" />
-      <meta property="twitter:description" content="Come to the gym on October 7th during lunch to sign up for your clubs this year!" />
-      <meta property="twitter:image" content="/images/splash.png" />
-      <!-- Favicon -->
-      <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
-      <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png" />
-      <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png" />
-      <link rel="manifest" href="/images/favicon/site.webmanifest" />
-      <link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg" color="#3e55c1" />
-      <link rel="shortcut icon" href="/images/favicon/favicon.ico" />
-      <meta name="msapplication-TileColor" content="#2d89ef" />
-      <meta name="msapplication-config" content="/images/favicon/browserconfig.xml" />
-      <meta name="theme-color" content="#ffffff" />
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
-      <link href="main.css" rel="stylesheet" />
-   </head>
-   <body>
-      <!-- Navigation-->
-      <nav class="navbar navbar-light bg-light static-top">
-         <div class="container">
-            <a class="navbar-brand" href="#!">DT Clubs Day 2022</a>
-            <a class="btn btn-primary" href="https://2021.dtclubsday.ca">2021</a>
-         </div>
-      </nav>
-      <!-- Masthead-->
-      <header class="masthead">
-         <div class="container position-relative">
-            <div class="row justify-content-center">
-               <div class="col-xl-6">
-                  <div class="text-center text-white">
-                     <!-- Page heading-->
-                     <h1 class="mb-5">
-                        <noscript> In order to use this site, it is necessary to enable JavaScript. Please email <a
-                           href="mailto:patrick@patrickh.ca">patrick@patrickh.ca</a> if you are having troubles
-                           turning it on.
-                        </noscript>
-                        <span id="typing"></span>
-                     </h1>
-                  </div>
-               </div>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="robots" content="index, follow" />
+    <!-- Primary Meta Tags -->
+    <title>David Thompson Clubs Day 2023</title>
+    <meta name="title" content="David Thompson Clubs Day" />
+    <meta name="description" content="Come to the gym early October during lunch to sign up for your clubs this year!" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dtclubsday.ca/" />
+    <meta property="og:title" content="David Thompson Clubs Day" />
+    <meta property="og:description" content="Come to the gym early October during lunch to sign up for your clubs this year!" />
+    <meta property="og:image" content="/images/splash.png" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://dtclubsday.ca/" />
+    <meta property="twitter:title" content="David Thompson Clubs Day" />
+    <meta property="twitter:description" content="Come to the gym early October during lunch to sign up for your clubs this year!" />
+    <meta property="twitter:image" content="/images/splash.png" />
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="/images/favicon/site.webmanifest" />
+    <link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg" color="#3e55c1" />
+    <link rel="shortcut icon" href="/images/favicon/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#2d89ef" />
+    <meta name="msapplication-config" content="/images/favicon/browserconfig.xml" />
+    <meta name="theme-color" content="#ffffff" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
+    <link href="main.css" rel="stylesheet" />
+  </head>
+  <body>
+    <!-- Navigation-->
+    <nav class="navbar navbar-light bg-light static-top">
+      <div class="container">
+        <a class="navbar-brand" href="#!">DT Clubs Day 2023</a>
+        <a class="btn btn-primary" href="https://2021.dtclubsday.ca">2021</a>
+      </div>
+    </nav>
+    <!-- Masthead-->
+    <header class="masthead">
+      <div class="container position-relative">
+        <div class="row justify-content-center">
+          <div class="col-xl-6">
+            <div class="text-center text-white">
+              <!-- Page heading-->
+              <h1 class="mb-5">
+                <noscript> In order to use this site, it is necessary to enable JavaScript. Please email <a href="mailto:patrick@patrickh.ca">patrick@patrickh.ca</a> if you are having troubles turning it on. </noscript>
+                <span id="typing"></span>
+              </h1>
             </div>
-         </div>
-      </header>
-      <!-- Footer-->
-      <footer class="footer">
-         <div class="container">
-            <div class="row">
-               <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
-                  <p class="text-muted small mb-4 mb-lg-0">&copy; David Thompson Secondary | <a href="https://instagram.com/PatrickH39" target="_blank" style="text-decoration: none;" rel="noreferrer"><b>Patrick Huynh</b></a></p>
-                  <p class="text-muted small mb-4 mb-lg-0">All trademarks and logos used are the property of their respective owners.
-                  </p>
-               </div>
-               <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
-                  <ul class="list-inline mb-0">
-                     <li class="list-inline-item">
-                        <a href="https://thompson.vsb.bc.ca" aria-label="Website" rel="noreferrer" target="_blank"><i class="bi-globe fs-3"></i></a>
-                     </li>
-                     <li class="list-inline-item">
-                        <a href="https://instagram.com/DTStudentCouncil" aria-label="Instagram" rel="noreferrer" target="_blank"><i class="bi-instagram fs-3"></i></a>
-                     </li>
-                     <li class="list-inline-item me-4">
-                        <a href="https://twitter.com/DTSecondary" aria-label="Twitter" rel="noreferrer" target="_blank"><i class="bi-twitter fs-3"></i></a>
-                     </li>
-                  </ul>
-               </div>
-            </div>
-         </div>
-      </footer>
-      <script src="https://unpkg.com/typeit@8.0.2/dist/index.umd.js"></script>
-      <script>
-         new TypeIt("#typing", {
-         speed: 70,
-         })
-         .pause(100)
-         .type("Welcome!")
-         .pause(1000)
-         .delete(8)
-         .type("Clubs Day is IN PERSON.")
-         .pause(1000)
-         .delete(31)
-         .type("Come by the GYM at LUNCH on OCTOBER 7TH!")
-         .go();
-      </script>
-   </body>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- Footer-->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
+            <p class="text-muted small mb-4 mb-lg-0">
+              &copy; David Thompson Secondary | <a href="https://instagram.com/PatrickH39" target="_blank" style="text-decoration: none" rel="noreferrer"><b>Patrick Huynh</b></a>
+            </p>
+            <p class="text-muted small mb-4 mb-lg-0">All trademarks and logos used are the property of their respective owners.</p>
+          </div>
+          <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
+            <ul class="list-inline mb-0">
+              <li class="list-inline-item">
+                <a href="https://thompson.vsb.bc.ca" aria-label="Website" rel="noreferrer" target="_blank"><i class="bi-globe fs-3"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://instagram.com/DTStudentCouncil" aria-label="Instagram" rel="noreferrer" target="_blank"><i class="bi-instagram fs-3"></i></a>
+              </li>
+              <li class="list-inline-item me-4">
+                <a href="https://twitter.com/DTSecondary" aria-label="Twitter" rel="noreferrer" target="_blank"><i class="bi-twitter fs-3"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="https://unpkg.com/typeit@8.0.2/dist/index.umd.js"></script>
+    <script>
+      new TypeIt("#typing", {
+        speed: 70,
+      })
+        .pause(100)
+        .type("Coming soon...")
+        .go();
+    </script>
+  </body>
 </html>
