Change footer rev.1

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
     <link href="main.css" rel="stylesheet" />
   </head>
-  <body>
+  <body style="overflow-y: hidden">
     <!-- Navigation-->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
@@ -61,9 +61,9 @@
       </div>
     </header>
     <!-- Footer-->
-    <footer class="footer">
+    <footer class="footer" style="background: white">
       <div class="container">
-        <div class="row">
+        <div class="row" style="padding-top: 2rem; padding-bottom: 2rem">
           <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
             <p class="text-muted small mb-4 mb-lg-0">
               &copy; David Thompson Secondary | <a href="https://instagram.com/PatrickH39" target="_blank" style="text-decoration: none" rel="noreferrer"><b>Patrick Huynh</b></a>
