Disallow scroll on desktop

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
     <link href="main.css" rel="stylesheet" />
   </head>
-  <body style="overflow-y: hidden">
+  <body>
     <!-- Navigation-->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
