--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
   </head>
   <body>
     <!-- Navigation-->
-    <nav class="navbar navbar-light bg-light static-top">
+    <nav class="navbar navbar-light static-top">
       <div class="container">
-        <a class="navbar-brand" href="#!">DT Clubs Day 2023</a>
+        <img src="/header-logo.png" style="position: absolute; height: 54%" />
+        <a class="navbar-brand" style="margin-left: 36px" href="#!">DT Clubs Day 2023</a>
         <a class="btn btn-primary" href="https://2021.dtclubsday.ca">2021</a>
       </div>
     </nav>
