Fix inline item margin

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <nav class="navbar navbar-light static-top">
       <div class="container">
         <img src="/header-logo.png" style="position: absolute; height: 54%" />
-        <a class="navbar-brand" style="margin-left: 36px" href="#!">DT Clubs Day 2023</a>
+        <a class="navbar-brand" href="#!">DT Clubs Day 2023</a>
         <a class="btn btn-primary" href="https://2021.dtclubsday.ca">2021</a>
       </div>
     </nav>
@@ -79,7 +79,7 @@
               <li class="list-inline-item">
                 <a href="https://instagram.com/DTStudentCouncil" aria-label="Instagram" rel="noreferrer" target="_blank"><i class="bi-instagram fs-3"></i></a>
               </li>
-              <li class="list-inline-item me-4">
+              <li class="list-inline-item">
                 <a href="https://twitter.com/DTSecondary" aria-label="Twitter" rel="noreferrer" target="_blank"><i class="bi-twitter fs-3"></i></a>
               </li>
             </ul>
