--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- Footer-->
     <footer class="footer" style="background: white">
       <div class="container">
-        <div class="row" style="padding-top: 1.5rem 0 1.5rem 0">
+        <div class="row" style="padding: 1.5rem 0 1.5rem 0">
           <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
             <p class="text-muted small mb-4 mb-lg-0">
               &copy; David Thompson Secondary | <a href="https://instagram.com/PatrickH39" target="_blank" style="text-decoration: none" rel="noreferrer"><b>Patrick Huynh</b></a>
