--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
       <div class="container">
         <div class="row" style="padding: 1.5rem 0 1.5rem 0">
           <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
-            <p class="text-muted small mb-4 mb-lg-0">
+            <p class="text-muted mb-lg-0">
               &copy; David Thompson Secondary | <a href="https://instagram.com/PatrickH39" target="_blank" style="text-decoration: none" rel="noreferrer"><b>Patrick Huynh</b></a>
             </p>
-            <p class="text-muted small mb-4 mb-lg-0">All trademarks and logos used are the property of their respective owners.</p>
+            <p class="text-muted small mb-lg-0">All trademarks and logos used are the property of their respective owners.</p>
           </div>
           <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
             <ul class="list-inline mb-0">
