fixed image :pensive:

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-light static-top">
       <div class="container">
-        <img src="/header-logo.png" style="position: absolute; height: 54%" />
+        <img src="/images/header-logo.png" style="position: absolute; height: 54%" />
         <a class="navbar-brand" href="#!">DT Clubs Day 2023</a>
         <a class="btn btn-primary" href="https://2021.dtclubsday.ca">2021</a>
       </div>
