--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="msapplication-TileColor" content="#2d89ef" />
     <meta name="msapplication-config" content="/images/favicon/browserconfig.xml" />
     <meta name="theme-color" content="#ffffff" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
@@ -74,13 +74,13 @@
           <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
-                <a href="https://thompson.vsb.bc.ca" aria-label="Website" rel="noreferrer" target="_blank"><i class="bi-globe fs-3"></i></a>
+                <a href="https://linktr.ee/DTStudentCouncil" aria-label="STUCO LinkTree" rel="noreferrer" target="_blank"><i class="bi-globe fs-3"></i></a>
               </li>
               <li class="list-inline-item">
                 <a href="https://instagram.com/DTStudentCouncil" aria-label="Instagram" rel="noreferrer" target="_blank"><i class="bi-instagram fs-3"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="https://twitter.com/DTSecondary" aria-label="Twitter" rel="noreferrer" target="_blank"><i class="bi-twitter fs-3"></i></a>
+                <a href="https://twitter.com/DTSecondary" aria-label="Twitter" rel="noreferrer" target="_blank"><i class="bi-twitter-x fs-3"></i></a>
               </li>
             </ul>
           </div>
