--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         },
       })
         .pause(100)
-        .type("Coming soon...")
+        .type("October 6th @ Lunch in the Gym")
         .go();
     </script>
   </body>
