Added a map button

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <noscript> In order to use this site, it is necessary to enable JavaScript. Please email <a href="mailto:patrick@patrickh.ca">patrick@patrickh.ca</a> if you are having troubles turning it on. </noscript>
                 <span id="typing"></span>
               </h1>
+              <a class="btn btn-primary" href="#"><b>View the Map</b></a>
             </div>
           </div>
         </div>
