Fixed buttons and added animation

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <!-- Primary Meta Tags -->
     <title>David Thompson Clubs Day 2023</title>
     <meta name="title" content="David Thompson Clubs Day" />
-    <meta name="description" content="Come to the gym early October during lunch to sign up for your clubs this year!" />
+    <meta name="description" content="Come to the gym October 6th during lunch to sign up for your clubs this year!" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dtclubsday.ca/" />
     <meta property="og:title" content="David Thompson Clubs Day" />
-    <meta property="og:description" content="Come to the gym early October during lunch to sign up for your clubs this year!" />
+    <meta property="og:description" content="Come to the gym October 6th during lunch to sign up for your clubs this year!" />
     <meta property="og:image" content="/images/splash.png" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://dtclubsday.ca/" />
     <meta property="twitter:title" content="David Thompson Clubs Day" />
-    <meta property="twitter:description" content="Come to the gym early October during lunch to sign up for your clubs this year!" />
+    <meta property="twitter:description" content="Come to the gym October 6th during lunch to sign up for your clubs this year!" />
     <meta property="twitter:image" content="/images/splash.png" />
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
@@ -53,10 +53,10 @@
             <div class="text-center text-white">
               <!-- Page heading-->
               <h1 class="mb-5">
-                <noscript> In order to use this site, it is necessary to enable JavaScript. Please email <a href="mailto:patrick@patrickh.ca">patrick@patrickh.ca</a> if you are having troubles turning it on. </noscript>
+                <noscript>Come to the gym October 6th during lunch to sign up for your clubs this year!</noscript>
                 <span id="typing"></span>
               </h1>
-              <a class="btn btn-primary" href="#"><b>View the Map</b></a>
+              <a class="btn btn-primary fade-button" href="#" style="padding: 0.75rem 2.5rem 0.75rem 2.5rem"><b>View the Map</b></a>
             </div>
           </div>
         </div>
