--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="robots" content="index, follow" />
     <!-- Primary Meta Tags -->
-    <title>David Thompson Clubs Day 2023</title>
+    <title>David Thompson Clubs Day 2024</title>
     <meta name="title" content="David Thompson Clubs Day" />
-    <meta name="description" content="Come to the gym October 6th during lunch to sign up for your clubs this year!" />
+    <meta name="description" content="Come to the gym October 3rd during lunch to sign up for your clubs this year!" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dtclubsday.ca/" />
     <meta property="og:title" content="David Thompson Clubs Day" />
-    <meta property="og:description" content="Come to the gym October 6th during lunch to sign up for your clubs this year!" />
+    <meta property="og:description" content="Come to the gym October 3rd during lunch to sign up for your clubs this year!" />
     <meta property="og:image" content="/images/splash.png" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://dtclubsday.ca/" />
     <meta property="twitter:title" content="David Thompson Clubs Day" />
-    <meta property="twitter:description" content="Come to the gym October 6th during lunch to sign up for your clubs this year!" />
+    <meta property="twitter:description" content="Come to the gym October 3rd during lunch to sign up for your clubs this year!" />
     <meta property="twitter:image" content="/images/splash.png" />
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
@@ -41,7 +41,7 @@
     <nav class="navbar navbar-light static-top">
       <div class="container">
         <img src="/images/header-logo.png" style="position: absolute; height: 54%" />
-        <a class="navbar-brand" href="#!">DT Clubs Day 2023</a>
+        <a class="navbar-brand" href="#!">DT Clubs Day 2024</a>
         <a class="btn btn-primary" href="https://2021.dtclubsday.ca">2021</a>
       </div>
     </nav>
@@ -53,7 +53,7 @@
             <div class="text-center text-white">
               <!-- Page heading-->
               <h1 class="mb-5">
-                <noscript>Come to the gym October 6th during lunch to sign up for your clubs this year!</noscript>
+                <noscript>Come to the gym October 3rd during lunch to sign up for your clubs this year!</noscript>
                 <span id="typing"></span>
               </h1>
               <a class="btn btn-primary fade-button" href="/Map23.pdf" style="padding: 0.75rem 2.5rem 0.75rem 2.5rem"><b>View the Map</b></a>
@@ -97,7 +97,7 @@
         },
       })
         .pause(100)
-        .type("October 6th @ Lunch in the Gym")
+        .type("October 3rd @ Lunch in the Gym")
         .go();
     </script>
   </body>
